--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,27 +20,6 @@
         android:layout_marginTop="30dp"
         android:text="@string/senha" />
 
-    <EditText
-        android:id="@+id/eTsenha"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tVsenha"
-        android:layout_below="@+id/tVsenha"
-        android:ems="10"
-        android:inputType="number" >
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/tVesquecisenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/eTsenha"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="@string/esqueci" />
-
     <Button
         android:id="@+id/bTentrar"
         android:layout_width="wrap_content"
@@ -48,6 +27,7 @@
         android:layout_below="@+id/tVesquecisenha"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="19dp"
+        android:onClick="menuprincipal"
         android:text="@string/entrar" />
 
     <Button
@@ -57,6 +37,7 @@
         android:layout_below="@+id/bTentrar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
+        android:onClick="cadastro"
         android:text="@string/cadastre" />
 
     <TextView
@@ -77,5 +58,23 @@
         android:layout_marginTop="37dp"
         android:text="@string/bemvindo"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/tVesquecisenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/bTcadastrese"
+        android:layout_below="@+id/tVsenha"
+        android:layout_marginTop="50dp"
+        android:text="@string/esqueci" />
+
+    <EditText
+        android:id="@+id/eTsenha"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tVsenha"
+        android:layout_below="@+id/tVsenha"
+        android:ems="10"
+        android:inputType="textPassword" />
 
 </RelativeLayout>
