Criação dos botões tela de cadastro

--- a/res/layout/activity_cadastro.xml
+++ b/res/layout/activity_cadastro.xml
@@ -1,16 +1,176 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CadastroActivity" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="446dp" >
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/eTnomecompleto"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVnomecompleto"
+            android:layout_below="@+id/tVnomecompleto"
+            android:ems="10"
+            android:inputType="textPersonName" >
+
+            <requestFocus />
+        </EditText>
+
+        <TextView
+            android:id="@+id/tVemailcadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/eTnomecompleto"
+            android:layout_below="@+id/eTnomecompleto"
+            android:text="@string/email" />
+
+        <EditText
+            android:id="@+id/eTemailcadastro"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVemailcadastro"
+            android:layout_below="@+id/tVemailcadastro"
+            android:ems="10"
+            android:inputType="textEmailAddress" />
+
+        <TextView
+            android:id="@+id/tVcpf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/eTemailcadastro"
+            android:layout_below="@+id/eTemailcadastro"
+            android:text="@string/cpf" />
+
+        <EditText
+            android:id="@+id/eTcpf"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVcpf"
+            android:layout_below="@+id/tVcpf"
+            android:ems="10"
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/tVdatanascimento"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/eTcpf"
+            android:layout_below="@+id/eTcpf"
+            android:text="@string/datanascimento" />
+
+        <EditText
+            android:id="@+id/eTdatanascimento"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVdatanascimento"
+            android:layout_below="@+id/tVdatanascimento"
+            android:ems="10"
+            android:inputType="date" />
+
+        <TextView
+            android:id="@+id/tVcelular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/eTdatanascimento"
+            android:layout_below="@+id/eTdatanascimento"
+            android:text="@string/celular" />
+
+        <EditText
+            android:id="@+id/editText4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVcelular"
+            android:layout_below="@+id/tVcelular"
+            android:ems="10"
+            android:inputType="number" />
+
+        <EditText
+            android:id="@+id/eTcelular"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/editText4"
+            android:layout_alignBottom="@+id/editText4"
+            android:layout_alignLeft="@+id/editText4"
+            android:ems="10"
+            android:inputType="phone" />
+
+        <TextView
+            android:id="@+id/tVsenhacadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/editText4"
+            android:layout_below="@+id/editText4"
+            android:text="@string/senha" />
+
+        <EditText
+            android:id="@+id/eTsenhacadastro"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVsenhacadastro"
+            android:layout_below="@+id/tVsenhacadastro"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <TextView
+            android:id="@+id/tVconfirmesenha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/eTsenhacadastro"
+            android:layout_below="@+id/eTsenhacadastro"
+            android:text="@string/confirmesenha" />
+
+        <EditText
+            android:id="@+id/eTconfirmesenha"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/tVconfirmesenha"
+            android:layout_below="@+id/tVconfirmesenha"
+            android:ems="10"
+            android:inputType="textPassword" />
+
+        <Button
+            android:id="@+id/bTcadastrar"
+            android:layout_width="95dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/eTconfirmesenha"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="14dp"
+            android:text="@string/cadastrar"
+            android:textSize="@dimen/FonteBotoes" />
+
+        <Button
+            android:id="@+id/bTvoltar"
+            android:layout_width="95dp"
+            android:layout_height="40dp"
+            android:layout_alignBaseline="@+id/bTcadastrar"
+            android:layout_alignBottom="@+id/bTcadastrar"
+            android:layout_alignLeft="@+id/eTconfirmesenha"
+            android:text="@string/voltar"
+            android:textSize="@dimen/FonteBotoes" />
+
+        <Button
+            android:id="@+id/bTlimpar"
+            android:layout_width="95dp"
+            android:layout_height="40dp"
+            android:layout_alignBaseline="@+id/bTcadastrar"
+            android:layout_alignBottom="@+id/bTcadastrar"
+            android:layout_toRightOf="@+id/bTcadastrar"
+            android:text="@string/limpar"
+            android:textSize="@dimen/FonteBotoes" />
+
+        <TextView
+            android:id="@+id/tVnomecompleto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/nome" />
+
+    </RelativeLayout>
+
+</ScrollView>
