--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -20,26 +20,6 @@
         android:layout_marginTop="30dp"
         android:text="@string/senha" />
 
-    <Button
-        android:id="@+id/bTentrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tVesquecisenha"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:onClick="menuprincipal"
-        android:text="@string/entrar" />
-
-    <Button
-        android:id="@+id/bTcadastrese"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/bTentrar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:onClick="cadastro"
-        android:text="@string/cadastre" />
-
     <TextView
         android:id="@+id/tVemail"
         android:layout_width="wrap_content"
@@ -59,16 +39,6 @@
         android:text="@string/bemvindo"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <TextView
-        android:id="@+id/tVesquecisenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/bTcadastrese"
-        android:layout_below="@+id/tVsenha"
-        android:layout_marginTop="50dp"
-        android:onClick="recuperarsenha"
-        android:text="@string/esqueci" />
-
     <EditText
         android:id="@+id/eTsenha"
         android:layout_width="250dp"
@@ -77,5 +47,36 @@
         android:layout_below="@+id/tVsenha"
         android:ems="10"
         android:inputType="textPassword" />
+
+    <TextView
+        android:id="@+id/tVesquecisenha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/eTsenha"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:onClick="recuperarsenha"
+        android:text="@string/esqueci" />
+
+    <Button
+        android:id="@+id/bTentrar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tVesquecisenha"
+        android:layout_centerHorizontal="true"
+        android:onClick="menuprincipal"
+        android:text="@string/entrar"
+        android:textSize="@dimen/FonteBotoes" />
+
+    <Button
+        android:id="@+id/bTcadastrese"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/bTentrar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:onClick="cadastro"
+        android:text="@string/cadastre"
+        android:textSize="@dimen/FonteBotoes" />
 
 </RelativeLayout>
