--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -59,16 +59,6 @@
         android:text="@string/esqueci" />
 
     <Button
-        android:id="@+id/bTentrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tVesquecisenha"
-        android:layout_centerHorizontal="true"
-        android:onClick="menuprincipal"
-        android:text="@string/entrar"
-        android:textSize="@dimen/FonteBotoes" />
-
-    <Button
         android:id="@+id/bTcadastrese"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,6 +67,17 @@
         android:layout_marginTop="16dp"
         android:onClick="cadastro"
         android:text="@string/cadastre"
+        android:textSize="@dimen/FonteBotoes" />
+
+    <Button
+        android:id="@+id/bTentrar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tVesquecisenha"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
+        android:onClick="menuprincipal"
+        android:text="@string/entrar"
         android:textSize="@dimen/FonteBotoes" />
 
 </RelativeLayout>
