--- a/res/layout/recuperar_senha_main.xml
+++ b/res/layout/recuperar_senha_main.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,8 +9,83 @@
     tools:context=".RecuperarSenhaMainActivity" >
 
     <TextView
+        android:id="@+id/tVinformecpf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignBottom="@+id/tVinformeemail"
+        android:layout_alignLeft="@+id/editinformecpf"
+        android:layout_marginBottom="80dp"
+        android:text="@string/informecpf" />
+
+    <TextView
+        android:id="@+id/tVinformeemail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editinformecpf"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="211dp"
+        android:text="@string/informeemal" />
+
+    <EditText
+        android:id="@+id/editinformecpf"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tVinformecpf"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="19dp"
+        android:ems="10"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/eTemail"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tVinformeemail"
+        android:layout_below="@+id/tVinformecpf"
+        android:ems="10"
+        android:inputType="textEmailAddress" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/tVgentileza"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/tVinformecpf"
+        android:layout_alignLeft="@+id/tVinformecpf"
+        android:layout_marginBottom="47dp"
+        android:text="@string/gentileza" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignLeft="@+id/tVinformecpf"
+        android:layout_alignParentBottom="true" >
+
+        <Button
+            android:id="@+id/bTvoltar"
+            android:layout_width="95dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/voltar"
+            android:textSize="@dimen/FonteBotoes" />
+
+        <Button
+            android:id="@+id/bTlimpar"
+            android:layout_width="95dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/limpar"
+            android:textSize="@dimen/FonteBotoes" />
+
+        <Button
+            android:id="@+id/bTenviar"
+            android:layout_width="95dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/enviar"
+            android:textSize="@dimen/FonteBotoes" />
+    </LinearLayout>
 
 </RelativeLayout>
