--- a/res/layout/recuperar_senha_main.xml
+++ b/res/layout/recuperar_senha_main.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="500dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/tVinformeemail"
-        android:layout_alignLeft="@+id/editinformecpf"
+        android:layout_alignLeft="@+id/eTinformeseucpf"
         android:layout_marginBottom="80dp"
         android:text="@string/informecpf" />
 
@@ -21,13 +21,13 @@
         android:id="@+id/tVinformeemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editinformecpf"
+        android:layout_alignLeft="@+id/eTinformeseucpf"
         android:layout_alignParentTop="true"
         android:layout_marginTop="211dp"
         android:text="@string/informeemal" />
 
     <EditText
-        android:id="@+id/editinformecpf"
+        android:id="@+id/eTinformeseucpf"
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/tVinformecpf"
@@ -44,8 +44,6 @@
         android:layout_below="@+id/tVinformecpf"
         android:ems="10"
         android:inputType="textEmailAddress" >
-
-        <requestFocus />
     </EditText>
 
     <TextView
@@ -58,34 +56,40 @@
         android:text="@string/gentileza" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignLeft="@+id/tVinformecpf"
-        android:layout_alignParentBottom="true" >
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/eTemail"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/eTemail"
+        android:layout_marginBottom="77dp" >
 
         <Button
             android:id="@+id/bTvoltar"
-            android:layout_width="95dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginTop="50dp"
+            android:layout_weight="0.39"
+            android:onClick="voltar"
             android:text="@string/voltar"
             android:textSize="@dimen/FonteBotoes" />
 
         <Button
             android:id="@+id/bTlimpar"
-            android:layout_width="95dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginTop="50dp"
+            android:layout_weight="0.39"
+            android:onClick="limpar"
             android:text="@string/limpar"
             android:textSize="@dimen/FonteBotoes" />
 
         <Button
             android:id="@+id/bTenviar"
-            android:layout_width="95dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginTop="50dp"
+            android:layout_weight="0.39"
             android:text="@string/enviar"
             android:textSize="@dimen/FonteBotoes" />
+
     </LinearLayout>
 
 </RelativeLayout>
