--- a/res/layout/recuperar_senha_main.xml
+++ b/res/layout/recuperar_senha_main.xml
@@ -5,7 +5,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context=".RecuperarSenhaMainActivity" >
 
     <TextView
@@ -59,10 +59,10 @@
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/eTemail"
+        android:layout_alignLeft="@+id/eTinformeseucpf"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/eTemail"
-        android:layout_marginBottom="77dp" >
+        android:layout_alignRight="@+id/eTinformeseucpf"
+        android:layout_marginBottom="150dp" >
 
         <Button
             android:id="@+id/bTvoltar"
@@ -88,8 +88,19 @@
             android:layout_height="40dp"
             android:layout_weight="0.39"
             android:text="@string/enviar"
+            android:onClick="enviar"
             android:textSize="@dimen/FonteBotoes" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/linearLayout1"
+        android:layout_marginBottom="18dp"
+        android:text="@string/textosenha" />
 
 </RelativeLayout>
