Botão limpar tela de usuário

--- a/res/layout/recuperar_senha_main.xml
+++ b/res/layout/recuperar_senha_main.xml
@@ -94,7 +94,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tVnomeusuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/linearLayout1"
