--- a/res/layout/menu_aluno_e_funcionario.xml
+++ b/res/layout/menu_aluno_e_funcionario.xml
@@ -9,6 +9,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
+        android:onClick="perfilusuarioaluno"
         android:text="@string/meuperfil" />
 
     <Button
