--- a/res/layout/perfil_usuario_aluno.xml
+++ b/res/layout/perfil_usuario_aluno.xml
@@ -109,7 +109,7 @@
             android:layout_width="135dp"
             android:layout_height="40dp"
             android:text="@string/limpar"
-            android:onClick="limpar"
+            android:onClick="limparperfilusuario"
             android:textSize="@dimen/FonteBotoes" />
 
         <Button
